<resources>
    <string name="app_name">AppCertificados</string>
    <string name="saludo_app">Examen IBim - Almeida Luis</string>
    <string name="str_iniciar_app">Iniciar la aplicación</string>
    <string name="str_personas">Lista de \nPersonas</string>
    <string name="add_element">+</string>
    <string name="add_persona">Agrega una persona a la lista</string>
    <string name="txt_addNombre">Ingresa su nombre</string>
    <string name="txt_addEdad">Ingresa su edad</string>
    <string name="txt_add_mail">Ingresa su mail</string>
    <string name="txt_add">Añadir</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="mn_certificado">Ver Certificados</string>
    <string name="mn_editar">Editar</string>
    <string name="mn_eliminar">Eliminar</string>

    <string name="str_Certificados">Certificados</string>
    <string name="str_nombre">Nombre Apellido</string>

    <string name="str_crear">Crear</string>
    <string name="str_edit_persona">Editar Persona</string>
    <string name="str_add_certificado">Añadir Certificado</string>
    <string name="str_edit_certificado">Editar Certificado</string>
    <string name="str_nombre_certificado">Nombre del Certificado</string>
    <string name="str_nombre_plataforma">Nombre de la Plataforma</string>
    <string name="str_fecha_certificado">Fecha de Obtención</string>
    <string name="str_editar">Editar</string>


</resources>